# manual-trading-platform

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
.github/: test-ubuntu.yml
.github/workflows/: build-macos.yml  build-ubuntu.yml  test-django.yml  test-macos.yml  test-ubuntu.yml
backend/: CMakeLists.txt
backend/bindings/: CMakeLists.txt  bindings.cpp
backend/include/: trading_logic.h
backend/include/core/: Market.h  Order.h  OrderBook.h  Position.h  Trade.h  Types.h
backend/regress/: CMakeLists.txt  Test_EdgeCaseRegression.h  Test_IntegrationRegression.h  Test_MemoryRegression.h  Test_VolumeRegression.h
backend/src/: CMakeLists.txt  binding.cpp  trading_logic.cpp
backend/src/core/: CMakeLists.txt  Market.cpp  Order.cpp  OrderBook.cpp  Position.cpp  Trade.cpp
backend/src/core/tests/: CMakeLists.txt  Test_Market.h  Test_Order.h  Test_OrderBook.h  Test_Position.h  Test_Trade.h
backend/src/system_tests/: CMakeLists.txt  Test_ErrorHandling.h  Test_FullTrading.h  Test_MarketLoad.h  Test_OrderBookManagement.h  Test_PositionTracking.h
trading_engine/exchange/: market_manager.py  models.py  trading_pairs.py  urls.py  views.py
trading_engine/exchange/management/commands/: check_orderbook.py  create_users.py  generate_orders.py  setup_test_balances.py  setup_trading_pairs.py
trading_engine/exchange/migrations/: 0001_initial.py  0002_balance.py  0003_alter_ordermodel_side_alter_ordermodel_status.py
trading_engine/exchange/templates/exchange/: base.html  dashboard.html  home.html  login.html  orderbook.html  positions.html  register.html
trading_engine/exchange/templatetags/: custom_filters.py
trading_engine/exchange/tests_unit/: test_market_manager.py  test_models.py  test_views.py
trading_engine/trading_engine/: asgi.py  settings.py  urls.py  wsgi.py
